--- a/index.html
+++ b/index.html
@@ -48,14 +48,97 @@
         <!-- About -->
         <section class="about" id="about">
           <div class="container">
-            <!--  -->
+            <div class="about__block">
+              <div class="about__block-title">VibeGUMS</div>
+              <svg
+                width="542"
+                height="48"
+                viewBox="0 0 542 48"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path d="M0 24H237" stroke="white" stroke-width="1.5" />
+                <path d="M305 24H542" stroke="white" stroke-width="1.5" />
+                <path
+                  d="M311.295 24.7009C309.715 25.2236 308.142 25.1995 306.565 24.8189C305.442 24.5492 304.402 24.6961 303.386 25.214C302.249 25.7969 301.18 25.6861 300.243 24.7852C299.316 23.894 298.408 23.9301 297.416 24.6841C296.845 25.1152 296.219 25.4934 295.569 25.7848C293.152 26.8615 291.142 26.3436 289.498 24.2577C289.123 23.788 288.807 23.234 288.09 23.3713C287.342 23.5159 287.526 24.1831 287.402 24.6865C287.371 24.8045 287.242 24.8984 287.22 25.0165C286.845 26.8446 286.202 27.6588 285.072 27.7045C283.991 27.7479 283.069 26.7363 282.706 25.0743C282.56 24.4022 282.493 23.7086 282.335 23.0389C282.189 22.4103 281.881 21.9069 281.116 22.0128C280.469 22.7716 280.335 23.7037 280.258 24.6624C280.144 26.0835 280.113 27.5263 279.486 28.8366C279.111 29.6194 278.676 30.4601 277.648 30.3396C276.683 30.2264 276.224 29.4075 276.03 28.5572C275.583 26.5845 275.163 24.6022 274.926 22.5813C274.852 21.9478 275.103 20.8446 274.338 20.8013C273.38 20.7531 273.648 21.9285 273.562 22.55C273.064 26.1413 272.658 29.7471 272.235 33.3481C272.154 34.0418 272.061 34.733 271.697 35.328C271.382 35.8458 270.985 36.3372 270.299 36.2674C269.68 36.2023 269.343 35.7326 269.154 35.1811C268.619 33.6226 268.538 31.9799 268.452 30.3565C268.234 26.3051 267.981 22.2585 267.453 18.2336C267.405 17.8723 267.469 17.328 266.941 17.3689C266.485 17.4051 266.674 17.9133 266.638 18.2264C265.706 26.2521 265.438 34.3356 264.649 42.3733C264.458 44.334 264.231 46.2923 263.134 48H262.376C261.636 47.1088 261.377 46.061 261.361 44.9097C261.265 38.5147 261.174 32.122 261.043 25.727C260.916 19.5945 260.739 13.4669 260.589 7.3344C259.678 7.09594 259.884 7.85227 259.845 8.2786C259.394 13.3079 258.954 18.342 258.536 23.3786C258.275 26.5604 258.07 29.7495 257.821 32.9362C257.752 33.7985 257.541 34.6367 257.152 35.4171C256.913 35.8916 256.619 36.3493 256.017 36.2698C255.476 36.1975 255.082 35.8386 254.948 35.2991C254.7 34.3019 254.406 33.2975 254.32 32.2786C253.94 27.7696 253.636 23.2533 253.285 18.7419C253.22 17.882 253.077 17.0293 252.936 16.179C252.905 15.9912 252.761 15.7238 252.613 15.678C252.31 15.5817 252.176 15.9117 252.099 16.1285C251.961 16.5331 251.86 16.9595 251.81 17.3858C251.447 20.7338 251.1 24.0843 250.742 27.4275C250.668 28.114 250.57 28.7933 250.312 29.4436C250.061 30.0819 249.65 30.4143 248.976 30.4071C248.33 30.3998 247.986 29.9976 247.762 29.446C247.088 27.784 247.095 25.9847 246.76 24.2553C246.507 22.945 246.242 21.6371 245.983 20.3268C245.907 19.9366 245.833 19.4886 245.355 19.5054C244.963 19.5199 244.855 19.9679 244.793 20.2834C244.497 21.8057 244.258 23.34 243.973 24.8647C243.885 25.3248 243.77 25.7993 243.574 26.2184C242.826 27.7985 241.292 27.9839 240.257 26.5893C239.832 26.0161 239.569 25.3127 239.251 24.6576C238.677 23.4797 238.463 23.157 237.5 24C236.535 24.8454 236 24.7371 234.074 24.7371C229.807 24.2553 230.544 23.8093 234 23.5C234.918 23.8252 235.623 23.3978 236.44 22.8366C238.206 21.6299 239.55 22.1044 240.515 24.0963C240.819 24.7274 240.907 25.8812 241.581 25.8306C242.439 25.768 242.219 24.5949 242.432 23.9012C242.929 22.2995 243.132 20.6182 243.699 19.0285C244.04 18.0674 244.626 17.4894 245.63 17.4701C246.696 17.4556 247.016 18.2529 247.245 19.1369C247.864 21.5239 248.063 23.9831 248.502 26.399C248.581 26.8302 248.491 27.5215 249.105 27.4926C249.621 27.4685 249.523 26.8181 249.564 26.4183C249.968 22.5982 250.364 18.7804 250.742 14.9578C250.814 14.2232 250.921 13.5054 251.155 12.8069C251.435 11.9831 251.803 11.2702 252.814 11.3473C253.897 11.4267 254.164 12.2577 254.272 13.1538C254.463 14.7387 254.623 16.3284 254.764 17.9157C255.12 21.9141 255.457 25.9149 255.816 29.9133C255.847 30.2674 255.692 30.8647 256.184 30.8768C256.753 30.896 256.664 30.2529 256.695 29.8651C256.927 26.8085 257.121 23.7495 257.355 20.6953C257.604 17.4388 257.883 14.1847 258.149 10.9306C258.378 8.14131 258.662 5.35688 258.815 2.56523C258.875 1.45002 259.133 0.570855 260.101 0H260.859C261.454 0.455239 261.841 1.02609 261.839 1.81855C262.2 4.08751 262.004 6.38057 262.044 8.65917C262.204 17.5086 262.245 26.3629 262.35 35.2172C262.364 36.4215 262.513 37.6234 262.606 38.8302C262.63 39.1265 262.623 39.5528 262.969 39.56C263.399 39.5721 263.392 39.1361 263.418 38.7892C263.822 34.0201 264.272 29.2557 264.63 24.4817C264.888 20.9964 265.345 17.5327 265.45 14.0305C265.481 13.0381 265.541 11.5881 266.925 11.5255C268.265 11.4629 268.435 12.831 268.698 13.845C269.3 16.1598 269.174 18.5612 269.362 20.9217C269.635 24.3565 270.144 27.7864 269.96 31.2525C269.936 31.7174 270.067 32.2208 270.536 32.2112C271.016 32.2015 271.107 31.6114 271.148 31.2043C271.363 29.0149 271.513 26.8181 271.733 24.6287C271.889 23.0823 272.077 21.5383 272.316 20.0064C272.563 18.4432 273.423 17.2726 274.307 17.3497C275.751 17.4749 275.932 18.8093 276.25 19.8547C276.774 21.5889 276.908 23.4099 277.034 25.2212C277.096 26.1196 277.096 27.0373 277.644 27.8828C278.253 27.3649 278.179 26.6399 278.275 26.0016C278.49 24.5925 278.664 23.1762 279.29 21.878C279.716 20.994 280.246 20.2352 281.365 20.3051C282.225 20.4376 282.634 21.1168 282.981 21.8033C283.425 22.6849 283.736 23.6194 283.96 24.5901C284.08 25.1032 284.137 25.8306 284.854 25.8161C285.478 25.8041 285.705 25.1899 285.896 24.6624C286.083 24.1373 286.209 23.5881 286.398 23.063C286.979 21.4444 288.353 21.0132 289.639 22.0996C290.774 23.0582 291.824 24.1012 293.344 24.4456C294.479 24.7033 295.404 24.4576 296.255 23.6821C298.477 21.6491 298.7 21.6299 301.214 23.4267C301.83 23.8675 302.469 24.0723 303.073 23.6074C304.378 22.6102 305.872 22.7379 307.315 22.839C309.003 22.957 310.637 23.8266 312.315 23.6074C317.468 24.8816 315.031 23.4669 311.295 24.7009Z"
+                  fill="white"
+                />
+              </svg>
+              <p class="about__block-desc">
+                Этот продукт создан для настоящих ценителей — тех, кто знает,
+                чего хочет, и не соглашается на компромиссы. В нем сочетаются
+                лучшие качества классической жевательной резинки: насыщенный,
+                глубокий вкус и долгий освежающий эффект. Каждое мгновение дарит
+                яркие ощущения, наполняя энергией и свежестью. Это жевательная
+                резинка для тех, кто ценит подлинность и мощь вкуса — без
+                лишнего, только настоящее удовольствие.
+              </p>
+            </div>
+
+            <div class="section__header">
+              <div class="section__header-title">
+                В ОСНОВЕ VIBE GUMS ТОЛЬКО НАТУРАЛЬНЫЕ ИНГРЕДИЕНТЫ
+              </div>
+              <p class="section__header-desc">
+                Использование только <span>натуральных ингредиентов</span> без
+                искусственных добавок обеспечивает чистый и насыщенный вкус,
+                позволяя наслаждаться каждым мгновением жевания.
+              </p>
+            </div>
+
+            <div class="about__ticker">
+              <div class="about__ticker-content">
+                <span>СТИЛЬНАЯ</span>
+                <span>ВКУСНАЯ</span>
+                <span>НАТУРАЛЬНАЯ</span>
+                <span>СТИЛЬНАЯ</span>
+                <span>ВКУСНАЯ</span>
+                <span>НАТУРАЛЬНАЯ</span>
+              </div>
+            </div>
+
+            <div class="advantages">
+              <div class="advantages__item">
+                <div class="advantages__item-icon icon">
+                  <img src="./assets/img/icons/leaves.svg" alt="" />
+                </div>
+                <div class="advantages__item-title">НАСЫЩЕННЫЙ ВКУС</div>
+                <p class="advantages__item-desc">
+                  Достигается только за счет натуральных ингредиентов и без
+                  добавления ароматизаторов.
+                </p>
+              </div>
+
+              <div class="advantages__item">
+                <div class="advantages__item-icon icon">
+                  <img src="./assets/img/icons/hand.svg" alt="" />
+                </div>
+                <div class="advantages__item-title">СИЛЬНАЯ МЯТА</div>
+                <p class="advantages__item-desc">
+                  Мы делаем специальный экстракт мяты который усиливает эффект
+                  свежести.
+                </p>
+              </div>
+
+              <div class="advantages__item">
+                <div class="advantages__item-icon icon">
+                  <img src="./assets/img/icons/speed.svg" alt="" />
+                </div>
+                <div class="advantages__item-title">ДОЛГИЙ ВКУС</div>
+                <p class="advantages__item-desc">
+                  Сохраняет вкус при жевании до одного часа за счет плотности
+                  вкуса.
+                </p>
+              </div>
+            </div>
           </div>
         </section>
 
         <!-- Assortment -->
         <section class="assortment" id="assortment">
           <div class="container">
-            <!--  -->
+            <div class="assortment__title">Ассортимент продукции</div>
+            
           </div>
         </section>
 
