--- a/index.html
+++ b/index.html
@@ -60,56 +60,52 @@
           </svg>
           <span>Меню</span>
         </div>
+
         <a
-          href="/tariffs"
+          href="#assortment"
           class="mobile__menu-tab"
           id="tab-link"
-          title="Тарифы"
+          title="Ассортимент"
         >
           <svg
-            width="20"
-            height="20"
-            viewBox="0 0 20 20"
-            fill="none"
-            xmlns="http://www.w3.org/2000/svg"
-          >
-            <g clip-path="url(#clip0_150_27221)">
-              <path
-                fill-rule="evenodd"
-                clip-rule="evenodd"
-                d="M10.8352 1.66675C15.8989 1.66675 20.0036 5.77145 20.0036 10.8352C20.0036 15.8989 15.8989 20.0036 10.8352 20.0036C5.77145 20.0036 1.66675 15.8989 1.66675 10.8352C1.66675 5.77145 5.77145 1.66675 10.8352 1.66675ZM3.68839 12.4947C4.00924 13.8721 4.72101 15.1276 5.73818 16.1103C6.75535 17.093 8.03463 17.761 9.42232 18.0342C9.24537 15.6275 8.45413 14.1835 7.45477 13.3849C6.49759 12.6193 5.19934 12.3232 3.68839 12.4937V12.4947ZM14.2156 13.384C13.2162 14.1844 12.425 15.6275 12.248 18.0342C13.6358 17.761 14.9152 17.0928 15.9324 16.1099C16.9496 15.127 17.6613 13.8714 17.982 12.4937C16.471 12.3232 15.1728 12.6193 14.2156 13.3849V13.384ZM10.8352 3.50043C9.1262 3.50013 7.47076 4.0966 6.15471 5.18683C4.83866 6.27707 3.94461 7.79263 3.62696 9.47183L3.58753 9.6992L5.61375 9.29396C6.14736 9.18761 6.65437 8.90614 7.22098 8.52381L7.65831 8.21942C8.38904 7.70049 9.47183 7.1678 10.8352 7.1678C12.1077 7.1678 13.1355 7.63173 13.8608 8.11582L14.4494 8.52381C14.9445 8.85846 15.3955 9.11518 15.8576 9.24628L16.0566 9.29396L18.0828 9.6992C17.812 7.97165 16.9329 6.39768 15.604 5.2611C14.2751 4.12452 12.5838 3.5001 10.8352 3.50043Z"
-                fill="currentColor"
-              ></path>
-            </g>
-            <defs>
-              <clipPath id="clip0_150_27221">
-                <rect width="20" height="20" fill="currentColor"></rect>
-              </clipPath>
-            </defs>
-          </svg>
-          <span>Тарифы</span>
-        </a>
-        <a
-          href="/reviews"
-          class="mobile__menu-tab"
-          id="tab-link"
-          title="Отзывы"
-        >
-          <svg
-            width="21"
-            height="20"
-            viewBox="0 0 21 20"
+            id="Bag"
+            width="24"
+            height="25"
+            viewBox="0 0 24 24"
             fill="none"
             xmlns="http://www.w3.org/2000/svg"
           >
             <path
-              d="M2.5 18.3334V3.33335C2.5 2.87502 2.66333 2.4828 2.99 2.15669C3.31667 1.83058 3.70889 1.66724 4.16667 1.66669H17.5C17.9583 1.66669 18.3508 1.83002 18.6775 2.15669C19.0042 2.48335 19.1672 2.87558 19.1667 3.33335V13.3334C19.1667 13.7917 19.0036 14.1842 18.6775 14.5109C18.3514 14.8375 17.9589 15.0006 17.5 15H5.83333L2.5 18.3334ZM8.39583 11.875L10.8333 10.3959L13.2708 11.875L12.625 9.10419L14.7917 7.22919L11.9375 7.00002L10.8333 4.37502L9.72917 7.00002L6.875 7.22919L9.04167 9.10419L8.39583 11.875Z"
+              fill-rule="evenodd"
+              clip-rule="evenodd"
+              d="M14.63 12.3997H16.17V10.8997H14.63V12.3997ZM9.01996 12.3997H10.56V10.8997H9.01996V12.3997ZM10.15 4.90967C10.78 4.27967 11.66 3.90967 12.55 3.90967H12.57C14.35 3.90967 15.79 5.28967 15.94 7.02967H9.17996C9.24996 6.23967 9.57996 5.46967 10.15 4.90967ZM20.59 7.02967H17.44C17.29 4.45967 15.17 2.40967 12.57 2.40967H12.55C11.26 2.40967 9.99996 2.92967 9.08996 3.83967C8.23996 4.68967 7.74996 5.83967 7.67996 7.02967H3.90996L2.95996 22.6597H21.54L20.59 7.02967Z"
               fill="currentColor"
             ></path>
           </svg>
-          <span>Отзывы</span>
+
+          <span>Продукты </span>
         </a>
-        <a href="/contacts" class="mobile__menu-tab" title="Контакты">
+
+        <a href="#buy" class="mobile__menu-tab" id="tab-link" title="Карта">
+          <svg
+            id="Location"
+            width="24"
+            height="24"
+            viewBox="0 0 24 24"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              fill-rule="evenodd"
+              clip-rule="evenodd"
+              d="M12.26 13.573C10.681 13.573 9.397 12.289 9.397 10.71C9.397 9.131 10.681 7.847 12.26 7.847C13.839 7.847 15.124 9.131 15.124 10.71C15.124 12.289 13.839 13.573 12.26 13.573ZM12.25 2.5C7.839 2.5 4.25 6.133 4.25 10.599C4.25 16.007 8.904 21.5 12.25 21.5C15.595 21.5 20.25 16.007 20.25 10.599C20.25 6.133 16.661 2.5 12.25 2.5Z"
+              fill="currentColor"
+            ></path>
+          </svg>
+          <span>Карта</span>
+        </a>
+
+        <a href="#contacts" class="mobile__menu-tab" title="Контакты">
           <svg
             width="18"
             height="20"
@@ -159,18 +155,36 @@
       <!-- Hero -->
       <section class="hero">
         <div class="container">
-          <div class="hero__img">
+          <div class="hero__img" data-aos="fade-up" data-aos-duration="1000">
             <img src="./assets/img/hero.png" alt="" />
-            <div class="hero__img-badge">НОВИНКА</div>
+            <div
+              class="hero__img-badge"
+              data-aos="zoom-in"
+              data-aos-delay="500"
+            >
+              НОВИНКА
+            </div>
           </div>
 
           <div class="hero__content">
             <div class="hero__title">
-              <span>ПОЧУВСТВУЙ</span>
-              <span>НАШ</span>
+              <span data-aos="fade-right" data-aos-delay="300">ПОЧУВСТВУЙ</span>
+              <span data-aos="fade-left" data-aos-delay="600">НАШ</span>
             </div>
-            <img class="hero__logo" src="./assets/img/logo.svg" alt="" />
-            <div class="hero__subtitle">жевательная резинка</div>
+            <img
+              class="hero__logo"
+              src="./assets/img/logo.svg"
+              alt=""
+              data-aos="zoom-in"
+              data-aos-delay="900"
+            />
+            <div
+              class="hero__subtitle"
+              data-aos="fade-up"
+              data-aos-delay="1200"
+            >
+              жевательная резинка
+            </div>
           </div>
         </div>
       </section>
@@ -178,7 +192,7 @@
       <!-- About -->
       <section class="about" id="about">
         <div class="container">
-          <div class="about__block">
+          <div class="about__block" data-aos="fade-up" data-aos-duration="1000">
             <div class="about__block-title">VibeGUMS</div>
             <svg
               width="542"
@@ -186,6 +200,8 @@
               viewBox="0 0 542 48"
               fill="none"
               xmlns="http://www.w3.org/2000/svg"
+              data-aos="fade-in"
+              data-aos-delay="300"
             >
               <path d="M0 24H237" stroke="white" stroke-width="1.5" />
               <path d="M305 24H542" stroke="white" stroke-width="1.5" />
@@ -205,7 +221,7 @@
             </p>
           </div>
 
-          <div class="section__header">
+          <div class="section__header" data-aos="fade-up" data-aos-delay="300">
             <div class="section__header-title">
               В ОСНОВЕ VIBE GUMS ТОЛЬКО НАТУРАЛЬНЫЕ ИНГРЕДИЕНТЫ
             </div>
@@ -216,7 +232,7 @@
             </p>
           </div>
 
-          <div class="about__ticker">
+          <div class="about__ticker" data-aos="fade-up" data-aos-delay="500">
             <div class="about__ticker-content">
               <span>СТИЛЬНАЯ</span>
               <span>ВКУСНАЯ</span>
@@ -228,7 +244,11 @@
           </div>
 
           <div class="advantages">
-            <div class="advantages__item">
+            <div
+              class="advantages__item"
+              data-aos="fade-up"
+              data-aos-delay="300"
+            >
               <div class="advantages__item-icon icon">
                 <img src="./assets/img/icons/leaves.svg" alt="" />
               </div>
@@ -239,7 +259,11 @@
               </p>
             </div>
 
-            <div class="advantages__item">
+            <div
+              class="advantages__item"
+              data-aos="fade-up"
+              data-aos-delay="500"
+            >
               <div class="advantages__item-icon icon">
                 <img src="./assets/img/icons/hand.svg" alt="" />
               </div>
@@ -250,7 +274,11 @@
               </p>
             </div>
 
-            <div class="advantages__item">
+            <div
+              class="advantages__item"
+              data-aos="fade-up"
+              data-aos-delay="700"
+            >
               <div class="advantages__item-icon icon">
                 <img src="./assets/img/icons/speed.svg" alt="" />
               </div>
@@ -267,9 +295,19 @@
       <!-- Assortment -->
       <section class="assortment" id="assortment">
         <div class="container">
-          <div class="assortment__title">Ассортимент продукции</div>
+          <div
+            class="assortment__title"
+            data-aos="fade-up"
+            data-aos-duration="1000"
+          >
+            Ассортимент продукции
+          </div>
           <div class="assortment__products">
-            <div class="assortment__product">
+            <div
+              class="assortment__product"
+              data-aos="fade-up"
+              data-aos-delay="300"
+            >
               <div class="assortment__product-header">
                 <div class="assortment__product-title">ЛИНЕЙКА</div>
                 <div class="assortment__product-level">
@@ -311,6 +349,8 @@
                 class="assortment__product-img"
                 src="./assets/img/assortment.png"
                 alt=""
+                data-aos="zoom-in"
+                data-aos-delay="500"
               />
 
               <ul class="assortment__product-details">
@@ -321,7 +361,11 @@
               </ul>
             </div>
 
-            <div class="assortment__product">
+            <div
+              class="assortment__product"
+              data-aos="fade-up"
+              data-aos-delay="500"
+            >
               <div class="assortment__product-header">
                 <div class="assortment__product-title">ЛИНЕЙКА</div>
                 <div class="assortment__product-level">
@@ -369,6 +413,8 @@
                 class="assortment__product-img"
                 src="./assets/img/assortment.png"
                 alt=""
+                data-aos="zoom-in"
+                data-aos-delay="700"
               />
 
               <ul class="assortment__product-details">
@@ -379,7 +425,11 @@
               </ul>
             </div>
 
-            <div class="assortment__product">
+            <div
+              class="assortment__product"
+              data-aos="fade-up"
+              data-aos-delay="700"
+            >
               <div class="assortment__product-header">
                 <div class="assortment__product-title">ЛИНЕЙКА</div>
                 <div class="assortment__product-level">
@@ -431,6 +481,8 @@
                 class="assortment__product-img"
                 src="./assets/img/assortment.png"
                 alt=""
+                data-aos="zoom-in"
+                data-aos-delay="900"
               />
 
               <ul class="assortment__product-details">
@@ -447,7 +499,11 @@
       <!-- Buy -->
       <section class="buy" id="buy">
         <div class="container">
-          <div class="section__header">
+          <div
+            class="section__header"
+            data-aos="fade-up"
+            data-aos-duration="1000"
+          >
             <div class="section__header-title">
               ГДЕ КУПИТЬ ПРОДУКЦИЮ <span>VIBE</span>
             </div>
@@ -457,15 +513,20 @@
           </div>
         </div>
 
-        <div class="buy__map" style="position: relative; overflow: hidden">
+        <div
+          class="buy__map"
+          style="position: relative; overflow: hidden"
+          data-aos="fade-up"
+          data-aos-delay="300"
+        >
           <a
             href="https://yandex.uz/maps?utm_medium=mapframe&utm_source=maps"
             style="color: #eee; font-size: 12px; position: absolute; top: 0px"
-            >Яндекс Карты</a
+            >Яндекс Карты</a
           ><a
             href="https://yandex.uz/maps/geo/moskva/53000094/?ll=37.385272%2C55.584227&utm_medium=mapframe&utm_source=maps&z=9.63"
             style="color: #eee; font-size: 12px; position: absolute; top: 14px"
-            >Москва — Яндекс Карты</a
+            >Москва — Яндекс Карты</a
           ><iframe
             src="https://yandex.uz/map-widget/v1/?ll=37.385272%2C55.584227&mode=search&ol=geo&ouri=ymapsbm1%3A%2F%2Fgeo%3Fdata%3DCgg1MzAwMDA5NBIa0KDQvtGB0YHQuNGPLCDQnNC-0YHQutCy0LAiCg2GeBZCFQEGX0I%2C&z=9.63"
             width="560"
@@ -480,7 +541,11 @@
       <!-- Partnership -->
       <section class="partnership" id="partnership">
         <div class="container">
-          <div class="section__header">
+          <div
+            class="section__header"
+            data-aos="fade-up"
+            data-aos-duration="1000"
+          >
             <div class="section__header-title">КАК СТАТЬ НАШИМ ПАРТНЕРОМ</div>
             <p class="section__header-desc">
               Мы ценим <span>долгосрочное сотрудничество</span> и предлагаем вам
@@ -492,7 +557,11 @@
           </div>
 
           <div class="partnership__content">
-            <div class="partnership__form">
+            <div
+              class="partnership__form"
+              data-aos="fade-right"
+              data-aos-delay="300"
+            >
               <div class="partnership__form-title">ЗАПОЛНИТЕ ФОРМУ</div>
               <p class="partnership__form-desc">
                 Наш менеджер пришлет Вам оптовый прайс-лист и подробные условия
@@ -523,29 +592,49 @@
               </form>
             </div>
 
-            <div class="partnership__advantages">
-              <div class="partnership__advantages-item">
+            <div
+              class="partnership__advantages"
+              data-aos="fade-left"
+              data-aos-delay="500"
+            >
+              <div
+                class="partnership__advantages-item"
+                data-aos="fade-up"
+                data-aos-delay="300"
+              >
                 <div class="icon">
                   <img src="./assets/img/icons/wallet.svg" alt="" />
                 </div>
                 <span>Гибкие условия оплаты</span>
               </div>
 
-              <div class="partnership__advantages-item">
+              <div
+                class="partnership__advantages-item"
+                data-aos="fade-up"
+                data-aos-delay="500"
+              >
                 <div class="icon">
                   <img src="./assets/img/icons/time.svg" alt="" />
                 </div>
                 <span>Быстрая отгрузка</span>
               </div>
 
-              <div class="partnership__advantages-item">
+              <div
+                class="partnership__advantages-item"
+                data-aos="fade-up"
+                data-aos-delay="700"
+              >
                 <div class="icon">
                   <img src="./assets/img/icons/ind.svg" alt="" />
                 </div>
                 <span>Индивидуальный подход</span>
               </div>
 
-              <div class="partnership__advantages-item">
+              <div
+                class="partnership__advantages-item"
+                data-aos="fade-up"
+                data-aos-delay="900"
+              >
                 <div class="icon">
                   <img src="./assets/img/icons/r.svg" alt="" />
                 </div>
@@ -560,7 +649,11 @@
     <footer class="footer" id="contacts">
       <div class="footer__top">
         <div class="container">
-          <div class="footer__top-item">
+          <div
+            class="footer__top-item"
+            data-aos="fade-up"
+            data-aos-duration="1000"
+          >
             <a href="#" class="footer__top-logo">
               <img src="./assets/img/logo-white.svg" alt="" />
             </a>
@@ -569,7 +662,7 @@
               Любое копирование без указания первоисточника запрещено.
             </p>
           </div>
-          <div class="footer__top-item">
+          <div class="footer__top-item" data-aos="fade-up" data-aos-delay="300">
             <a
               href="mailto:info@vibegums.ru"
               target="_blank"
